<resources>
    <string name="app_name">Nyimpen</string>
    <string name="peminjam">Peminjam</string>
    <string name="asep_saepudin">Asep Saepudin</string>
    <string name="tanggal">12/13/20</string>
    <string name="tanggal_kembali">Tanggal kembali</string>
    <string name="nama_barang_nya">Nama Barang nya</string>
    <string name="kodeBarang">IVT-101</string>
    <string name="kode_barang">Kode Barang</string>
    <string name="status">Status</string>
    <string name="tersedia">Tersedia</string>
    <string name="do_you_have_account">Do you have account?</string>
    <string name="regiter">Regiter</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ukm_name">UKM Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="readyAccount">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="catatanDesk">Barang tersebut sekarang memiliki kondisi yang cukup mengenaskan, ada yang patah ada yang ilang dan lain sebagainya</string>
    <string name="catatan">Catatan</string>
    <string name="jumlah">Jumlah</string>
    <string name="jaminanDesk">KTM peminjam</string>
    <string name="jumlahDesk">2 pcs</string>
    <string name="tanggal_pengembalian">Tanggal Pengembalian</string>
    <string name="tanggalPengembalianDesk">24/04/2023</string>
    <string name="tanggal_peminjaman">Tanggal Peminjaman</string>
    <string name="tanggalPeminjamanDesk">12/04/2023</string>
    <string name="kondisi_awal">Kondisi Awal</string>
    <string name="kondisiAwalDesk">Kondisi mulus bersih putih dan wangy wangy</string>
    <string name="deskripsi_barang">Deskripsi Barang</string>
    <string name="deskripsiBarangDesk">Sapu ijuknya masih bagus bgt dan keren abis habis itu ya begitu ini cuman desksripsi yang dipanjangin aja</string>
    <string name="organisasi_peminjam">Organisasi Peminjam</string>
    <string name="organisasiExampleDesk">Badan Eksekutif Mahasiswa</string>
    <string name="nama_peminjam">Nama Peminjam</string>
    <string name="namaExample">Asep Saepudin</string>
    <string name="kodeBarangDesk">IVT-101</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="namaBarangDesk">Sapu Ijuk</string>
    <string name="hapus">Hapus</string>
    <string name="edit">Edit</string>
    <string name="statusDesk">Tersedia/perlu perbaikan/dipinjam/Hilang/Dalam perbaikan/dipinjam/sedang dipakai/telah dikembalikan/telah dibuang/</string>
    <string name="asal_barang">Asal Barang</string>
    <string name="asalBarangDesk">Hibah/pemberian/hibah/sumbangan/beli</string>
    <string name="save">Save</string>
    <string name="jaminan">Jaminan</string>
    <string name="add_item_peminjaman">Add Item Peminjaman</string>
    <string name="edit_item_peminjaman">Edit Item Peminjaman</string>
    <string name="delete">Delete</string>
    <string name="enter_namaUkm">Masukkan nama UKM!</string>
    <string name="enter_conPass">Masukkan confirm password!</string>
    <string name="enter_email">Masukkan email!</string>
    <string name="invalid_email">Invalid email address!</string>
    <string name="enter_password">Masukkan password!</string>
    <string name="invalid_password">Your password must be at least 8 characters</string>
    <string name="invalid_email_already">Email already registered</string>
    <string name="invalid_current_password">Your current password must be at least 8 characters</string>
    <string name="invalid_new_password">Your new password must be at least 8 characters</string>
    <string name="invalid_confirm_new_password">Your confirm new password must be at least 8 characters</string>
    <string name="password_not_match">Different passwords, please enter same password </string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_pass_desk">After updating your password, check your email</string>
    <string name="send">Send</string>
    <string name="profile">Profile</string>
    <string name="add_image">Add Image</string>
    <string name="mau_nyari_apa">Mau nyari apa?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="peminjaman">Peminjaman</string>
    <string name="inventory">Inventory</string>
    <string name="add_item_inventory">Add Item Inventory</string>
    <string name="foto_barang">Foto Barang</string>

    <string name="title_logout">Logout</string>
    <string name="content_logout">Are you sure you want to log out?</string>
    <string name="btn_cancel">No</string>
    <string name="btn_logout">Yes</string>
    <string name="email_desk">BEMFilkomUB@gmail.com</string>
    <string name="update_profile">Update Profile</string>

    <string name="title_hapus">Hapus Item</string>
    <string name="content_hapus">Are you sure you want to remove item?</string>




</resources>