<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih"
    tools:context=".view.activity.PeminjamanDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivItem"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:elevation="12dp"
                android:src="@drawable/default_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/llList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-31dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivItem">

                <!--                Nama Barang-->
                <LinearLayout
                    android:layout_width="291dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_detail_item"
                    android:orientation="vertical"
                    android:paddingHorizontal="26dp"
                    android:paddingVertical="18dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/plusjakartasans_extrabold"
                        android:text="@string/nama_barang"
                        android:textColor="@color/font_color_dark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvNamaBarang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/plusjakartasans_medium"
                        android:maxLines="1"
                        android:text="@string/namaBarangDesk"
                        android:textColor="@color/font_color_dark"
                        android:textSize="12sp" />

                </LinearLayout>

                <!--                Kode Barang-->
                <LinearLayout
                    android:layout_width="291dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_detail_item"
                    android:orientation="vertical"
                    android:paddingHorizontal="26dp"
                    android:paddingVertical="18dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/plusjakartasans_extrabold"
                        android:text="@string/kode_barang"
                        android:textColor="@color/font_color_dark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvKodeBarang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/plusjakartasans_medium"
                        android:maxLines="1"
                        android:text="@string/kodeBarangDesk"
                        android:textColor="@color/font_color_dark"
                        android:textSize="12sp" />

                </LinearLayout>

                <!--                Nama Peminjam-->
                <LinearLayout
                    android:layout_width="291dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_detail_item"
                    android:orientation="vertical"
                    android:paddingHorizontal="26dp"
                    android:paddingVertical="18dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/plusjakartasans_extrabold"
                        android:text="@string/nama_peminjam"
                        android:textColor="@color/font_color_dark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvNamaPeminjam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/plusjakartasans_medium"
                        android:maxLines="1"
                        android:text="@string/namaExample"
                        android:textColor="@color/font_color_dark"
                        android:textSize="12sp" />

                </LinearLayout>

                <!--                Organisasi Peminjam-->
                <LinearLayout
                    android:layout_width="291dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_detail_item"
                    android:orientation="vertical"
                    android:paddingHorizontal="26dp"
                    android:paddingVertical="18dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/plusjakartasans_extrabold"
                        android:text="@string/organisasi_peminjam"
                        android:textColor="@color/font_color_dark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvOrganisasiPeminjam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/plusjakartasans_medium"
                        android:maxLines="1"
                        android:text="@string/organisasiExampleDesk"
                        android:textColor="@color/font_color_dark"
                        android:textSize="12sp" />

                </LinearLayout>

                <!--                Deskripsi Barang-->
                <LinearLayout
                    android:layout_width="291dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_detail_item"
                    android:orientation="vertical"
                    android:paddingHorizontal="26dp"
                    android:paddingVertical="18dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/plusjakartasans_extrabold"
                        android:text="@string/deskripsi_barang"
                        android:textColor="@color/font_color_dark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvDeskripsiBarang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/plusjakartasans_medium"
                        android:text="@string/deskripsiBarangDesk"
                        android:textColor="@color/font_color_dark"
                        android:textSize="12sp" />

                </LinearLayout>

                <!--                Kondisi Awal-->
                <LinearLayout
                    android:layout_width="291dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_detail_item"
                    android:orientation="vertical"
                    android:paddingHorizontal="26dp"
                    android:paddingVertical="18dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/plusjakartasans_extrabold"
                        android:text="@string/kondisi_awal"
                        android:textColor="@color/font_color_dark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvKondisiAwal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/plusjakartasans_medium"
                        android:text="@string/kondisiAwalDesk"
                        android:textColor="@color/font_color_dark"
                        android:textSize="12sp" />

                </LinearLayout>

                <!--                Tanggal Peminjaman-->
                <LinearLayout
                    android:layout_width="291dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_detail_item"
                    android:orientation="vertical"
                    android:paddingHorizontal="26dp"
                    android:paddingVertical="18dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/plusjakartasans_extrabold"
                        android:text="@string/tanggal_peminjaman"
                        android:textColor="@color/font_color_dark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvTanggalPeminjaman"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/plusjakartasans_medium"
                        android:text="@string/tanggalPeminjamanDesk"
                        android:textColor="@color/font_color_dark"
                        android:textSize="12sp" />

                </LinearLayout>

                <!--                Tanggal Pengembalian-->
                <LinearLayout
                    android:layout_width="291dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_detail_item"
                    android:orientation="vertical"
                    android:paddingHorizontal="26dp"
                    android:paddingVertical="18dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/plusjakartasans_extrabold"
                        android:text="@string/tanggal_pengembalian"
                        android:textColor="@color/font_color_dark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvTanggalPengembalian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/plusjakartasans_medium"
                        android:text="@string/tanggalPengembalianDesk"
                        android:textColor="@color/font_color_dark"
                        android:textSize="12sp" />

                </LinearLayout>

                <!--                Jumlah-->
                <LinearLayout
                    android:layout_width="291dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_detail_item"
                    android:orientation="vertical"
                    android:paddingHorizontal="26dp"
                    android:paddingVertical="18dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/plusjakartasans_extrabold"
                        android:text="@string/jumlah"
                        android:textColor="@color/font_color_dark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvJumlah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/plusjakartasans_medium"
                        android:text="@string/jumlahDesk"
                        android:textColor="@color/font_color_dark"
                        android:textSize="12sp" />

                </LinearLayout>

                <!--                Jaminan-->
                <LinearLayout
                    android:layout_width="291dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_detail_item"
                    android:orientation="vertical"
                    android:paddingHorizontal="26dp"
                    android:paddingVertical="18dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/plusjakartasans_extrabold"
                        android:text="@string/jumlah"
                        android:textColor="@color/font_color_dark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvJaminan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/plusjakartasans_medium"
                        android:text="@string/jaminanDesk"
                        android:textColor="@color/font_color_dark"
                        android:textSize="12sp" />

                </LinearLayout>

                <!--                Catatan-->
                <LinearLayout
                    android:layout_width="291dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_detail_item"
                    android:orientation="vertical"
                    android:paddingHorizontal="26dp"
                    android:paddingVertical="18dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/plusjakartasans_extrabold"
                        android:text="@string/catatan"
                        android:textColor="@color/font_color_dark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvCatatan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/plusjakartasans_medium"
                        android:text="@string/catatanDesk"
                        android:textColor="@color/font_color_dark"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="46dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnEditInventory"
                        style="@style/Widget.Material3.Button.Icon"
                        android:layout_width="110dp"
                        android:layout_height="50dp"
                        android:fontFamily="@font/plusjakartasans_medium"
                        android:text="@string/edit"
                        android:textColor="@color/font_color_dark"
                        android:textSize="14sp"
                        app:icon="@drawable/ic_edit"
                        app:iconTint="@null" />

                    <Button
                        android:id="@+id/btnHapusInventory"
                        style="@style/Widget.Material3.Button.Icon"
                        android:layout_width="110dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="26dp"
                        android:backgroundTint="@color/danger_color_50"
                        android:fontFamily="@font/plusjakartasans_medium"
                        android:text="@string/hapus"
                        android:textColor="@color/font_color_dark"
                        android:textSize="14sp"
                        app:icon="@drawable/ic_cross"
                        app:iconTint="@null" />

                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />

            </LinearLayout>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:src="@drawable/ic_back_bulet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>